# AdvanceProgrammingEx4

./: CMakeLists.txt  FileCacheManager.cpp  FileCacheManager.h  Inteface.h  Interfaces.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  README.md  main.cpp
Problems/: MatrixProblem.cpp  MatrixProblem.h  StringProblem.cpp  StringProblem.h
SearchableSolutionAdapter/: MatrixSearchSolverAdapter.cpp  MatrixSearchSolverAdapter.h  SearchableSolutionAdapter.cpp  SearchableSolutionAdapter.h
SearchingAlgorithms/: AddHeuristicComparator.h  MatricesGenerator.cpp  MatricesGenerator.h  MyPriorityQueue.cpp  MyPriorityQueue.h  State.cpp  State.h  StateComparator.cpp  StateComparator.h
SearchingAlgorithms/Searchable/: ISearchable.h  MatrixSearchable.cpp  MatrixSearchable.h
SearchingAlgorithms/Searchers/: AStar.h  Astar.h  BestFirstSearch.cpp  BestFirstSearch.h  BreadthFirstSearch.h  DepthFirstSearch.h  ISearcher.h  Searcher.cpp  Searcher.h
Solutions/: MatrixSolution.cpp  MatrixSolution.h  Solution.cpp  Solution.h  StringSolution.cpp  StringSolution.h
Solvers/: MatrixSolver.cpp  MatrixSolver.h  StringReverser.cpp  StringReverser.h
